# helix-sandbox

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  RETEST_PROMPT.md  main.py  pyproject.toml  server.py
.github/workflows/: ci.yml
docker/sandbox/: Dockerfile  entrypoint.sh
scripts/: build_sandbox_image.ps1  build_sandbox_image.sh  wsb_pilot_agent.py
src/: __init__.py
src/sandbox/: __init__.py  backend_base.py  backend_factory.py  circuit_breaker.py  docker_backend.py  guacamole_backend.py  promotion_engine.py  sandbox_config.py  sandbox_manager.py  windows_sandbox_backend.py
src/tools/: sandbox_pilot_bridge.py
src/utils/: platform_utils.py  subprocess_utils.py
tests/: test_backend_base.py  test_sandbox_config.py  test_sandbox_manager.py  test_sandbox_manager_file_ops.py  test_server.py
