[project]
name = "helix-sandbox"
version = "2.0.0"
description = "Secure sandbox MCP server for AI agents — Docker and Windows Sandbox backends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "tsunamayo7"}]
dependencies = [
    "fastmcp>=2.0.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"src/sandbox/sandbox_manager.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
